Fix vertical alignment of icons in the footer.

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -52,6 +52,11 @@
 
 footer.footer {
   position: relative;
+
+  .icon.is-small {
+    vertical-align: baseline;
+  }
+
   .github-fork-ribbon > a:not(.icon) {
     border: 1px dotted @grey;
     color: @grey;
